# winconfig

./: .gitignore  CHANGELOG.md  cliff.toml  justfile  pyproject.toml  winconfig.additional.definition.yaml  winconfig.config.schema.json  winconfig.config.yaml  winconfig.plan.schema.json  winconfig.plan.yaml  winconfig.tasks.schema.json  winconfig.tasks.yaml
.github/workflows/: release_note.yaml
config_tasks/: schema.json  winutil_tasks.yaml
samples/: winconfig.additional.definition.yaml  winconfig.config.schema.json  winconfig.config.yaml  winconfig.plan.schema.json  winconfig.plan.yaml
src/winconfig/: cli.py  exceptions.py
src/winconfig/cli/: apply_tasks.py  cli_utils.py  config.py  config_applier.py  execution.py  main.py
src/winconfig/config/: action.py  config.py
src/winconfig/config/definition/: __init__.py  definition.py  registry.py  schtask.py  script.py  service.py
src/winconfig/definitions/: builtin.definition.yaml  builtin_taskname.py  schema.json  sophia.definition.yaml  sophia_definition.yaml  winconfig.definition.schema.json  winconfig.definition.yaml  winutil.definition.yaml  winutil_definition.yaml  winutil_definitions.yaml
src/winconfig/definitions/models/: definition.py  schtask.py  script.py
src/winconfig/dsl/: action.py  config.py  const_types.py  definition.py  registry.py  schtask.py  script.py  service.py  task_plan.py
src/winconfig/dsl/definition/: __init__.py  const_types.py  definition.py  registry.py  schtask.py  script.py  service.py
src/winconfig/engine/: __init__.py  config.py  config_context.py  engine.py  model_loader.py  powershell.py  task.py  task_builder.py
src/winconfig/generator/: script_generator.py
src/winconfig/gui/: app.py  app.tcss  content.py  controller.py  gui.py  gui.tcss  root_access_mixin.py  task_list.py
src/winconfig/model/: config.py  config_task_model.py  definition.py  execution.py  task.py  winconfig_model.py
src/winconfig/model/definition/: definition.py  registry.py  schtask.py  script.py  service.py
src/winconfig/models/: const_types.py  definition.py  mode.py  registry.py  schtask.py  script.py  service.py
src/winconfig/powershell/: constants.py  process.py  script_generator.py
src/winconfig/resources/: __init__.py  builtin.definition.schema.json  builtin.definition.yaml
src/winconfig/scripts/: generate_definitions.py  generate_schema.py  generate_tasks.py
tests/: conftest.py  run_test_in_wsb.ps1  run_wsb.ps1  test_apply.py  test_builtin_definition.py  test_default_resistory.py  test_default_scheduled_task.py  test_default_service.py  test_default_value.py  test_with_powershell.py
