[project]
name = "winconfig"
version = "0.0.3"
requires-python = "~=3.12.0"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.11.9",
    "pythonnet>=3.0.5",
    "pyyaml>=6.0.3",
    "textual>=6.9.0",
    "typer>=0.19.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyinstaller>=6.17.0",
    "pytest>=8.4.2",
    "ruff>=0.14.7",
    "textual-dev>=1.8.0",
    "ty>=0.0.2",
]

[tool.uv]
package = true

[tool.ruff]
include = [ "pyproject.toml", "src/**/*.py", "tests/**/*.py" ]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
    "ERA",    # eradicate[comment-out-code]
    "S607",   # flake8-bandit[start-process-with-partial-path]
    "COM",    # flake8-commas[trailing-comma]
    "DTZ",    # flake8-datetimez
    "EM",     # flake8-errmsg
    "INP",    # flake8-no-pep420[implicit-namespace-package]
    "RET",    # flake8-return
    "E501",   # pycodestyle[line-too-long]
    "D",      # pydocstyle
    "RUF001", # Ruff[unicode-character-in-string]
    "RUF002", # Ruff[unicode-character-in-docstring]
    "RUF003", # Ruff[unicode-character-in-comment]
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "ANN201",  # flake8-annotations[missing-return-type-undocumented-public-function]
    "PLR1714", # Pylint-Refactor[repeated-equality-comparison]
    "PLR2004", # Pylint-Refactor[magic-value-comparison]
    "S101",    # flake8-bandit[assert]
]
